<resources>
    <string name="app_name">Dukandar</string>
    <string name="textView2">Welcomes you to the world of online daily need shopping </string>
    <string name="textView">choose the what to buy</string>
    <string name="choose_the_what_to_buy">choose the what to buy!</string>
    <string name="vegetables">vegetables</string>
    <string name="clothes">clothes</string>
    <string name="kirana">Kirana</string>
    <string name="we_deliver_to_you_from_local_vendors_free_of_cost">we deliver to you from local vendors free of cost</string>
    <string name="sunflower_oil">Sunflower oil</string>
    <string name="select_the_product_and_quantity">select the product and quantity</string>
    <string name="sugar">Sugar</string>
    <string name="jawas_oil">Jawas oil</string>
    <string name="oil">OIL</string>
    <string name="soyabean_oil">Soyabean oil</string>
    <string name="ricebran_oil">RiceBran oil</string>
    <string name="quantity_kg1">quantity (kg)</string>
    <string name="quantity_kg2">quantity (kg)</string>
    <string name="falli_groundnut_oil">Falli/Groundnut oil</string>
    <string name="quantity_kg3">quantity (kg)</string>
    <string name="quantity_kg4">quantity (kg)</string>
    <string name="quantity_kg5">quantity (kg)</string>
    <string name="quantity_kg">quantity (kg)</string>
    <string name="daal_pulses">Dal / pulses</string>
    <string name="mung_dal">Mung Dal</string>
    <string name="quantity_kg11">quantity(kg)</string>
    <string name="quantity_kg12">quantity(kg)</string>
    <string name="quantity_kg13">quantity(kg)</string>
    <string name="quantity_kg14">quantity(kg)</string>
    <string name="quantity_kg15">quantity(kg)</string>
    <string name="quantity_kg16">quantity(kg)</string>
    <string name="quantity_kg17">quantity(kg)</string>
    <string name="quantity_kg18">quantity(kg)</string>
    <string name="quantity_kg19">quantity(kg)</string>
    <string name="tuvar_dal">Tuvar Dal</string>
    <string name="quantity_kg20">quantity(kg)</string>
    <string name="textview">TextView</string>
    <string name="masur_dal">Masur Dal</string>
    <string name="barbati_dal">Barbati Dal</string>
    <string name="urad_dal">Urad Dal</string>
    <string name="chana_dal">Chana Dal</string>
    <string name="mung_mogar_dal">Mung-Mogar Dal</string>
    <string name="add_item_which_are_not_in_list_here">add item which are not in list here</string>
    <string name="other_pulses">Other pulses</string>
    <string name="shabudana_sago">Shabudana/Sago</string>
    <string name="peanuts_shengdana">Peanuts/Shengdana</string>
    <string name="barbati">Barbati</string>
    <string name="chana_kabuli_chana">Chana/kabuli chana</string>
    <string name="matki_mot">Matki/Mot</string>
    <string name="jawar">Jawar</string>
    <string name="toiletries_skin_products">Toiletries / skin products</string>
    <string name="bathing_soap">Bathing soap</string>
    <string name="cloth_soap">Cloth soap</string>
    <string name="dishwasher_soap">Dishwasher soap</string>
    <string name="kapda_soap">Kapda soap</string>
    <string name="toothpaste">Toothpaste</string>
    <string name="shampoo">Shampoo</string>
    <string name="bodylotion">BodyLotion</string>
    <string name="facewash">Facewash</string>
    <string name="facepowder">Facepowder</string>
    <string name="detergent_powder">Detergent powder</string>
    <string name="add_items_which_are_not_in_the_list1">add items which are not in the list</string>
    <string name="brand_gram_price1">brand/gram/price</string>
    <string name="brand_gram_price2">brand/gram/price</string>
    <string name="brand_gram_price3">brand/gram/price</string>
    <string name="brand_gram_price4">brand/gram/price</string>
    <string name="brand_gram_price5">brand/gram/price</string>
    <string name="brand_gram_price6">brand/gram/price</string>
    <string name="brand_gram_price7">brand/gram/price</string>
    <string name="brand_gram_price8">brand/gram/price</string>
    <string name="brand_gram_price9">brand/gram/price</string>
    <string name="brand_gram_price0">brand/gram/price</string>
    <string name="quantity_price11">quantity/price</string>
    <string name="quantity_price12">quantity/price</string>
    <string name="quantity_price13">quantity/price</string>
    <string name="quantity_price14">quantity/price</string>
    <string name="quantity_price">quantity/price</string>
    <string name="pooja_item">pooja item</string>
    <string name="agarbatti">Agarbatti</string>
    <string name="kapoor">Kapoor</string>
    <string name="dhoop">Dhoop</string>
    <string name="nariyal">Nariyal</string>
    <string name="matchbox">Matchbox</string>
    <string name="add_items_which_are_not_in_the_list2">add items which are not in the list</string>
    <string name="other_items">other items</string>
    <string name="add_other_items_seperated_by_comma">add other items seperated by comma(,)</string>
    <string name="quantity_gram14">quantity(gram))</string>
    <string name="quantity_gram121">quantity(gram)</string>
    <string name="add_items_which_are_not_in_the_list3">add items which are not in the list</string>
    <string name="add_items_which_are_not_in_the_list4">add items which are not in the list</string>
    <string name="quantity_kg_gram16">quantity(kg/gram)</string>
    <string name="quantity_kg_gram17">quantity(kg/gram)</string>
    <string name="kaju">Kaju</string>
    <string name="quantity_kg_gram18">quantity(kg/gram)</string>
    <string name="dry_fruits">Dry fruits</string>
    <string name="quantity_kg_gram19">quantity(kg/gram)</string>
    <string name="add_items_which_are_not_in_the_list">add items which are not in the list</string>
    <string name="quantity_kg_gram20">quantity(kg/gram)</string>
    <string name="elaichi_lawng">Elaichi/lawng</string>
    <string name="quantity_kg_gram">quantity(kg/gram)</string>
    <string name="dates_khajoor">Dates/khajoor</string>
    <string name="badam">Badam</string>
    <string name="salt">Salt</string>
    <string name="dhaniya_powder">Dhaniya powder</string>
    <string name="haldi_powder">Haldi powder</string>
    <string name="garam_masala">Garam Masala</string>
    <string name="chilli_powder">Chilli powder</string>
    <string name="any_other_masala">Any other masala</string>
    <string name="spices">Spices</string>
    <string name="quantity_gram21">quantity(gram))</string>
    <string name="quantity_gram22">quantity(gram))</string>
    <string name="quantity_gram23">quantity(gram))</string>
    <string name="submit">Submit</string>
    <string name="quantity_kg123">quantity(kg))</string>
    <string name="quantity_kg122">quantity(kg))</string>
    <string name="quantity_kg124">quantity(kg))</string>
    <string name="quantity_kg125">quantity(kg))</string>
    <string name="manuka_rasins125">Manuka/Rasins</string>
    <string name="quantity_kg127">quantity(kg))</string>
    <string name="quantity_kg126">quantity(kg))</string>
    <string name="leafy_vegetables">Leafy vegetables</string>
    <string name="vegetable_list">vegetable list</string>
    <string name="vegetables1">vegetables</string>
    <string name="quantity">quantity</string>
    <string name="kanda_pyaj">Kanda/pyaj</string>
    <string name="tamatar">Tamatar</string>
    <string name="aalu_batata">Aalu/batata</string>
    <string name="lawki">Lawki</string>
    <string name="kobi_ful_gobi">Kobi/Ful-Gobi</string>
    <string name="patta_gobi">Patta-Gobi</string>
    <string name="wange_bringle">Wange/Bringle</string>
    <string name="gajar_carrot">Gajar/Carrot</string>
    <string name="kohala_pumpkin">Kohala/pumpkin</string>
    <string name="kakdi_cucumber">Kakdi/Cucumber</string>
    <string name="mirchi">Mirchi</string>
    <string name="shimla_mirch">Shimla Mirch</string>
    <string name="bhendi">Bhendi</string>
    <string name="karle">Karle</string>
    <string name="kakdi_cucumber1">Kakdi/Cucumber</string>
    <string name="other_vegetables">Other vegetables</string>
    <string name="dhemsa">Dhemsa</string>
    <string name="tondale">Tondale</string>
    <string name="mashroom">Mashroom</string>
    <string name="wal">Wal</string>
    <string name="watana_batana">Watana/Batana</string>
    <string name="dodke">Dodke</string>
    <string name="chawli">Chawli</string>
    <string name="fanaas">Fanaas</string>
    <string name="gavar">Gavar</string>
    <string name="falli_shenga">Falli/shenga</string>
    <string name="ambadi">Ambadi</string>
    <string name="methi">Methi</string>
    <string name="shepu">Shepu</string>
    <string name="popat">Popat</string>
    <string name="kothimbir_sambar">Kothimbir/Sambar</string>
    <string name="palak_spiach">Palak/Spiach</string>
    <string name="beetroot">BeetRoot</string>
    <string name="adrak">Adrak</string>
    <string name="lehsun">Lehsun</string>
    <string name="submit1">Submit</string>
    <string name="contact_for_details_9623568303">Contact for details: 9623568303</string>
    <string name="order_details">Order Details</string>
    <string name="place_order">place order</string>
    <string name="mob_no">mob no</string>
    <string name="contact_details">Contact Details</string>
    <string name="clothes_8605513868">Clothes : 8605513868</string>
    <string name="current_address">current address</string>
    <string name="mobile_no">Mob No</string>
    <string name="address">Address</string>
    <string name="vegetables_xxxxxxxxx">Vegetables : xxxxxxxxx</string>
    <string name="kirana_9623568303">Kirana : 9623568303</string>
    <string name="name">Name</string>
    <string name="name1">name</string>
</resources>