<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="184dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/name1"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.92"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:autofillHints="" />

                    <EditText
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/current_address"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="@+id/mobNo"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/mobNo"
                        app:layout_constraintTop_toBottomOf="@+id/mobNo"
                        android:autofillHints="" />

                    <EditText
                        android:id="@+id/mobNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/mob_no"
                        android:inputType="textPersonName"
                        app:layout_constraintEnd_toEndOf="@+id/name"
                        app:layout_constraintHorizontal_bias="0.062"
                        app:layout_constraintStart_toStartOf="@+id/name"
                        app:layout_constraintTop_toBottomOf="@+id/name"
                        android:autofillHints="" />

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:text="@string/place_order"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/address" />

                    <TextView
                        android:id="@+id/textView63"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="196dp"
                        android:text="@string/name"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/name"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView62"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="68dp"
                        android:text="@string/mobile_no"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textView63"
                        app:layout_constraintHorizontal_bias="0.454"
                        app:layout_constraintStart_toStartOf="@+id/textView63"
                        app:layout_constraintTop_toBottomOf="@+id/textView63" />

                    <TextView
                        android:id="@+id/textView61"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="70dp"
                        android:text="@string/address"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/textView62"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView62"
                        app:layout_constraintTop_toBottomOf="@+id/textView62" />

                    <TextView
                        android:id="@+id/textView82"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:text="@string/contact_details"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button7" />

                    <TextView
                        android:id="@+id/textView84"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/kirana_9623568303"
                        app:layout_constraintEnd_toEndOf="@+id/textView82"
                        app:layout_constraintStart_toStartOf="@+id/textView82"
                        app:layout_constraintTop_toBottomOf="@+id/textView82" />

                    <TextView
                        android:id="@+id/textView85"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/clothes_8605513868"
                        app:layout_constraintEnd_toEndOf="@+id/textView84"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/textView84"
                        app:layout_constraintTop_toBottomOf="@+id/textView84" />

                    <TextView
                        android:id="@+id/textView86"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/vegetables_xxxxxxxxx"
                        app:layout_constraintEnd_toEndOf="@+id/textView85"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView85"
                        app:layout_constraintTop_toBottomOf="@+id/textView85" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView60"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:text="@string/order_details"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>